--- a/papas/statement/statement.tex
+++ b/papas/statement/statement.tex
@@ -2,28 +2,38 @@
 \usepackage[utf8]{inputenc}
 \usepackage{lipsum}
 
-\title{Ejemplo}
+\title{Papas fritas}
 
 \begin{document}
 \begin{problemDescription}
-\lipsum[1-3]
+	Julieta y sus $n$ amigos fueron a comer papas fritas a su local favorito, la Industria Chilena de Papas Caseras (ICPC), y se compran una porción de $p$ papas para compartir.
+
+
+	Como el grupo está compuesto por personas muy civilizadas (demasiado civilizadas, dirían algunos), se sientan en una mesa redonda y se turnan en sacar papas siguiendo siempre la misma dirección, repitiendo el ciclo cuando ya todos sacaron una papa. Dado el orden que eligieron, Julieta es la $k$-ésima persona en sacar papas por primera vez.
+
+	Como las papas fritas son caseras, cada papa puede tener un tamaño radicalmente distinto a las otras, por lo que Julieta tomó nota del tamaño $t_i$ de cada una de ellas.
+
+	Como cualquier ser humano razonable, Julieta es una fanática total de las papas fritas, por lo que quiere saber cuál es la mayor cantidad que puede comer, independientemente de la elección de papas de sus amigos, y te pidió que crees un programa que encuentre la solución. ¿Podrás ayudarla?
 \end{problemDescription}
 
 \begin{inputDescription}
-\lipsum[1]
+	La primera línea de entrada contiene tres enteros $p$, $n$ y $k$ ($1 \leq n, p \leq 10^6$ y $1 \leq k \leq n+1$), los cuales indican la cantidad de papas, la cantidad de amigos, y la posición de Julieta en el orden respectivamente.
+	La siguiente línea contiene $p$ enteros, donde el entero $i$-ésimo corresponde al tamaño $t_i$ ($1 \leq t_i \leq 10^9$) de la papa número $i$.
 \end{inputDescription}
 
 \begin{outputDescription}
-\lipsum[1]
+	La salida debe contener un único entero, la cantidad máxima que Julieta tiene garantizado que independientemente de sus amigos si ella decide de forma óptima qué papas sacar.
 \end{outputDescription}
 
 \begin{scoreDescription}
-  \subtask{20}
-  Descripción Subtarea1
-  \subtask{30}
-  Descripción Subtarea2
-  \subtask{50}
-  Descripción Subtarea3
+	\subtask{??}
+  	Se probarán varios casos en que $k = 1$, es decir, Julieta es la primera en sacar.
+  	\subtask{??}
+ 	Se probarán varios casos en que $n+1 = k = p$.
+  	\subtask{??}
+  	Se probarán varios casos en que $n \leq 10$.
+	\subtask{??}
+	Se probarán varios casos sin restricciones adicionales.
 \end{scoreDescription}
 
 \begin{sampleDescription}
