--- a/poleras/statement/statement.tex
+++ b/poleras/statement/statement.tex
@@ -2,31 +2,60 @@
 \usepackage[utf8]{inputenc}
 \usepackage{lipsum}
 
-\title{Ejemplo}
+\title{Poleras}
 
 \begin{document}
 \begin{problemDescription}
-\lipsum[1-3]
+Javier va a viajar a la Olimpiada Internacional de Informática (IOI) acompañando al equipo Chileno de este año. En su emoción, junto a Cathy y Manuel
+decidieron mandar a hacer poleras oficiales de equipo.
+
+Como todos sabemos, hay $n$ tallas de poleras desde la más pequeña (talla $1$) a la más grande (talla $n$). Para cada talla $i$, Javier mandó
+a hacer $a_i$ poleras.
+
+Un par de días antes de iniciar el viaje a Hungría para la IOI, Javier se dio cuenta de que había cometido un gran error: ¡Había registrado
+mal las tallas de poleras de cada miembro de la delegación, y en verdad necesitaba $b_i$ poleras de talla $i$ en vez de $a_i$!
+
+Ya era muy tarde para mandar a hacer las poleras de nuevo, y Javier desesperadamente buscó una solución para este problema. En un momento de
+inspiración, recordó que la secadora de ropa podía achicar una polera cuando se usaba a mucha potencia.
+
+Javier investigó en internet y descubrió que su modelo de secadora podía achicar una polera a lo más $k$ tallas. Es decir, podía achicar una
+polera de talla $s$ a una de talla $s-1, s-2, \dots$, hasta $s-k$.
+
+Pero antes de achicar las poleras, Javier quiere asegurarse de que es posible convertir las poleras que ya compró (de talla $a_i$) en poleras de
+tallas de las que necesita $b_i$. Como Javier está muy apurado con los temas del viaje, no tiene el tiempo para determinar esto con certeza.
+
+Javier sabe que los competidores de la OCI son los mejores programadores de Chile a nivel escolar, y por eso decidió pedirte tu ayuda. ¿Puedes
+ayudar a Javier con su problema?
 \end{problemDescription}
 
 \begin{inputDescription}
-\lipsum[1]
+La primera línea de la entrada contiene los números enteros $n$ y $k$ $(1 \leq n \leq 10^6, 0 \leq k \leq 10^6)$ separados por espacios, indicando la
+cantidad de tallas de poleras y la cantidad máxima de tallas que la secadora puede achicar.
+
+La segunda línea contiene los números enteros $a_1, a_2, \dots, a_n$ $(0 \leq a_i \leq 10^9$) separados por espacios, indicando la cantidad de
+poleras de cada talla que tiene Javier.
+
+La tercera línea contiene los números enteros $b_1, b_2, \dots, b_n$ $(0 \leq b_i \leq 10^9)$ separados por espacios, indicando la cantidad de
+poleras de cada talla que necesita Javier.
 \end{inputDescription}
 
 \begin{outputDescription}
-\lipsum[1]
+Si es posible que Javier obtenga las tallas que necesita, tu programa debe imprimir \texttt{SI}. En el caso contrario, debe imprimir \texttt{NO}.
 \end{outputDescription}
 
 \begin{scoreDescription}
+  \subtask{10}
+  Se probarán varios casos con $k=0$, es decir, la secadora no puede achicar poleras.
   \subtask{20}
-  Descripción Subtarea1
+  Se probarán varios casos con $k=1$, es decir, la secadora puede achicar a lo más una talla.
   \subtask{30}
-  Descripción Subtarea2
-  \subtask{50}
-  Descripción Subtarea3
+  Se probarán varios casos con $k \leq 100$.
+  \subtask{40}
+  Se probarán varios casos sin restricciones adicionales.
 \end{scoreDescription}
 
 \begin{sampleDescription}
+% TODO: Add samples
 \sampleIO{sample-1}
 \sampleIO{sample-2}
 \end{sampleDescription}
