Especifica más el formato de input

--- a/papas/statement/statement.tex
+++ b/papas/statement/statement.tex
@@ -17,8 +17,9 @@
 \end{problemDescription}
 
 \begin{inputDescription}
-	La primera línea de entrada contiene tres enteros $p$, $n$ y $k$ ($1 \leq n, p \leq 10^6$ y $1 \leq k \leq n+1$), los cuales indican la cantidad de papas, la cantidad de amigos, y la posición de Julieta en el orden respectivamente.
-	La siguiente línea contiene $p$ enteros, donde el entero $i$-ésimo corresponde al tamaño $t_i$ ($1 \leq t_i \leq 10^9$) de la papa número $i$.
+	La primera línea de entrada contiene tres enteros $p$, $n$ y $k$ $(1 \leq n, p \leq 10^6$ y $1 \leq k \leq n+1)$ separados por espacios, los cuales indican la cantidad de papas, la cantidad de amigos, y la posición de Julieta en el orden respectivamente.
+
+	La segunda línea contiene $p$ enteros separados por espacios, donde el entero $i$-ésimo corresponde al tamaño $t_i$ ($1 \leq t_i \leq 10^9$) de la papa número $i$.
 \end{inputDescription}
 
 \begin{outputDescription}
