--- a/papas/statement/statement.tex
+++ b/papas/statement/statement.tex
@@ -11,7 +11,7 @@
 	Al grupo le gusta hacer todo en conjunto, así que compraron una porción
 	de papas para compartir entre todos.
 	Los amigos de Julieta son personas muy civilizadas y toman turnos para
-	sacar papas.
+	sacar papas (algunos incluso dirían que son personas demasiado civilizadas).
 	Para mantener el orden, han diseñado un sistema donde cada
 	persona saca solo una papa a la vez.
 
@@ -33,7 +33,7 @@
 	El tamaño de su ración corresponde a la suma de los tamaños de todas
 	las papas de que saca.
 
-	De forma natural, Julieta quiere que su ración sea lo más grande posible.
+	Naturalmente, Julieta quiere que su ración sea lo más grande posible.
 	Específicamente, si saca papas maximizando su ración, e independiente
 	de la elección de sus amigos, quiere saber el tamaño mínimo que tendrá su ración.
 	¿Podrías ayudarla?
@@ -41,12 +41,12 @@
 
 \begin{inputDescription}
 	La primera línea de entrada contiene tres enteros $p$, $n$ y $k$
-	$(1 \leq n, p \leq 10^6$ y $1 \leq k \leq n)$, los cuales
+	$(1 \leq k \leq p \leq n \leq 10^6$ y $2 \leq n)$, los cuales
 	indican respectivamente la cantidad de papas, la cantidad de personas en el grupo
 	y la posición de Julieta
 
 	La segunda línea contiene $p$ enteros, donde el entero $i$-ésimo
-	corresponde al tamaño $t_i$ ($1 \leq t_i \leq 10^9$) de la papa número $i$.
+	corresponde al tamaño $t_i$ ($1 \leq t_i \leq 10^3$) de la papa número $i$.
 \end{inputDescription}
 
 \begin{outputDescription}
@@ -56,7 +56,7 @@
 
 \begin{scoreDescription}
 	\subtask{??}
-  	Se probarán varios casos en que $k = 1$, es decir, Julieta es la primera en sacar.
+  	Se probarán varios casos en que $k = 1$.
   	\subtask{??}
  	Se probarán varios casos en que $n = k = p$.
   	\subtask{??}
