Ajustar límite de paltas

--- a/paltas/statement/statement.tex
+++ b/paltas/statement/statement.tex
@@ -53,14 +53,14 @@ que indican la cantidad de paltas, el número de consultas y los límites del ra
 Los valores satisfacen las siguientes restricciones:
 
 \begin{itemize}
-  \item $1 \leq n \leq 10^5$
+  \item $1 \leq n \leq 10^6$
   \item $1 \leq q \leq 10^5$
   \item $0 \leq k_{min} \leq k_{max} \leq 10^9$
-  \item $x \leq 10^9$
+  \item $x \leq 10^5$
 \end{itemize}
 
 La segunda línea contiene $n$ enteros.
-El entero $i$-ésimo corresponde a la tasa de descomposición $r_i$
+El entero $i$-ésimo corresponde a la tasa de descomposición $r_i$ ($1 < r_i \leq 10^4$)
 de la palta $i$-ésima.
 
 Luego vienen $q$ líneas describiendo la consultas.
