--- a/paltas/statement/statement.tex
+++ b/paltas/statement/statement.tex
@@ -56,7 +56,6 @@ Los valores satisfacen las siguientes restricciones:
   \item $1 \leq n \leq 10^6$
   \item $1 \leq q \leq 10^5$
   \item $0 \leq k_{min} \leq k_{max} \leq 10^9$
-  \item $x \leq 10^5$
 \end{itemize}
 
 La segunda línea contiene $n$ enteros.
@@ -64,7 +63,7 @@ El entero $i$-ésimo corresponde a la tasa de descomposición $r_i$ ($1 < r_i \l
 de la palta $i$-ésima.
 
 Luego vienen $q$ líneas describiendo la consultas.
-Cada línea contiene un entero $x$.
+Cada línea contiene un entero $x$ ($0 \leq x \leq 10^5$)
 La respuesta a la consulta debe corresponder a cuántas paltas pueden consumirse
 en el tiempo $x$.
 
