Revisión enunciado pirata

--- a/piratas/statement/statement.tex
+++ b/piratas/statement/statement.tex
@@ -6,43 +6,72 @@
 
 \begin{document}
 \begin{problemDescription}
-    Guffy es un joven que sueña con convertirse en el "Rey De Los Piratas", un título que ICPC (International
-    Contest of Piracy and Computing) otorga a quien gane su competencia anual de piratería. La competencia
-    consiste en que la ICPC publica $N$ archivos online para que los participantes descarguen -- de
-    manera legal -- la mayor cantidad posible. Quien descargue la mayor cantidad de archivos es coronado como
-    el Rey De Los Piratas.
+    Guffy es un joven que sueña con convertirse en el \emph{Rey De Los Piratas}, un título que la ICPC
+    (International Contest of Piracy and Computing) otorga al ganador de su competencia anual de
+    piratería.
+    La competencia consiste en que la ICPC publica $N$ archivos online para que los participantes
+    descarguen (de manera completamente legal).
+    Quién descargue la mayor cantidad de archivos es coronado como el Rey De Los Piratas.
 
-    La ICPC publica sus archivos en forma de \emph{torrent}. A diferencia de una descarga convencional desde
-    un servidor, en donde un servidor central controla el envío de datos a todos quienes descarguen el
-    archivo, una descarga por \emph{torrent} tiene $S$ "seeds" quienes toman el rol de proveer el archivo
-    a quienes lo descargan, llamados "peers".
+    La ICPC publica sus archivos en forma de \emph{torrent}.
+    % A diferencia de una descarga convencional, en donde un servidor central
+    % controla el envío de datos a todos quienes descarguen el archivo,
+    En una descarga por \emph{torrent} cada archivo tiene asociado un número de ``seeds'' quienes
+    son los que toman el rol de proveer el archivo a quienes lo descargan.
+    Quienes descargan el archivo son llamados ``peers''.
 
-    Para ganar la competencia Guffy ha decidido priorizar los torrents con la mayor cantidad de seeds y la menor
-    cantidad de peers. De esta forma él puede maximizar la velocidad de descarga al tener más proveedores y menos
-    competencia. Ayuda a Guffy a elegir qué torrents descargar.
+    Para ganar la competencia Guffy ha decidido priorizar los torrents con la mayor cantidad
+    de seeds y la menor cantidad de peers.
+    De esta forma puede maximizar la velocidad de descarga al tener más proveedores y menos
+    competencia tratando de descargar el mismo archivo.
+    ?`Podrías ayudar a Guffy a elegir qué torrents descargar?
 \end{problemDescription}
 
 \begin{inputDescription}
-La primera linea de la entra consiste de un solo entero $N$, $0 < N \leq 10000$ representado el número de torrents
-entre los cuales Guffy debe elegir. Las siguientes $N$ lineas consisten de dos enteros separados por un espacio
-$S_i$, $P_i$ representado la cantidad de seeds y peers respectivamente del torrent $i$. Con $0 \leq S \leq 10000$
-y $0 \leq P \leq 10000$.
+    La primera línea de la entrada contiene un solo entero $N$ ($0 < N \leq 10^4$)
+    representado el número de torrents entre los cuales Guffy debe elegir.
+    Cada torrent es identificado con un número entre $1$ y $N$.
+    Las siguientes $N$ líneas describen los torrents.
+    La línea $i$-ésima contiene dos enteros $S_i$ y $P_i$ ($0 \leq S \leq 10^4$ y $0 \leq P \leq 10^4$)
+    correspondientes respectivamente a la cantidad de seeds y peers del torrent $i$.
 \end{inputDescription}
 
 \begin{outputDescription}
-    La salida consiste de un solo entero $I$, representado el índice del torrent con mayor cantidad de seeds, en
-    caso de empate se debe elegir el torrent con la menor cantidad de peers.
-    En caso de un segundo empate cualquiera de los índices ganadores sirve.
+    La salida debe contener un único entero, correspondiente al número
+    del torrent con la mayor cantidad de seeds.
+    En caso de empate se debe elegir el torrent con la menor cantidad de peers.
+    Si hay un segundo empate puede imprimirse cualquiera de los índices ganadores.
 \end{outputDescription}
 
 \begin{scoreDescription}
-Este problema no contiene subtareas. Se dará puntaje proporcional de a cuerdo a la cantidad de
-casos de prueba correctos siendo 100 el puntaje máximo.
+Este problema no contiene subtareas.
+Se dará puntaje proporcional a la cantidad de casos de prueba correctos siendo 100 el puntaje máximo.
 \end{scoreDescription}
 
 \begin{sampleDescription}
 \sampleIO{sample-1}
+\begin{center}
+    \begin{minipage}{0.95\textwidth}
+    \textbf{Explicación caso de prueba 1:} La respuesta es el torrent 3 que tiene 5 seeds y 10 peers,
+    ya que es el torrent con la mayor cantidad de seeds y ningún otro torrent tiene la misma cantidad.
+    \end{minipage}
+\end{center}
 \sampleIO{sample-2}
+\begin{center}
+    \begin{minipage}{0.95\textwidth}
+    \textbf{Explicación caso de prueba 2:} En este caso los torrents 1 y 4 tienen la mayor cantidad
+    de seeds con un total de 10.
+    Como el torrent 1 tiene menos peers que el torrent 4, la respuesta es el torrent 1.
+    \end{minipage}
+\end{center}
+\sampleIO{sample-3}
+\begin{center}
+    \begin{minipage}{0.95\textwidth}
+    \textbf{Explicación caso de prueba 3:} En este caso tanto el torrent 2 como el 3 son aceptados
+    como correctos, ya que ambos tienen la mayor cantidad de seeds e igual cantidad de peers.
+    \end{minipage}
+\end{center}
+
 \end{sampleDescription}
 
 \end{document}
