Revisión enunciado poleras

--- a/piratas/statement/statement.tex
+++ b/piratas/statement/statement.tex
@@ -52,14 +52,14 @@ Se dará puntaje proporcional a la cantidad de casos de prueba correctos siendo 
 \sampleIO{sample-1}
 \begin{center}
     \begin{minipage}{0.95\textwidth}
-    \textbf{Explicación caso de prueba 1:} La respuesta es el torrent 3 que tiene 5 seeds y 10 peers,
+    \textbf{Explicación caso de ejemplo 1:} La respuesta es el torrent 3 que tiene 5 seeds y 10 peers,
     ya que es el torrent con la mayor cantidad de seeds y ningún otro torrent tiene la misma cantidad.
     \end{minipage}
 \end{center}
 \sampleIO{sample-2}
 \begin{center}
     \begin{minipage}{0.95\textwidth}
-    \textbf{Explicación caso de prueba 2:} En este caso los torrents 1 y 4 tienen la mayor cantidad
+    \textbf{Explicación caso de ejemplo 2:} En este caso los torrents 1 y 4 tienen la mayor cantidad
     de seeds con un total de 10.
     Como el torrent 1 tiene menos peers que el torrent 4, la respuesta es el torrent 1.
     \end{minipage}
@@ -67,7 +67,7 @@ Se dará puntaje proporcional a la cantidad de casos de prueba correctos siendo 
 \sampleIO{sample-3}
 \begin{center}
     \begin{minipage}{0.95\textwidth}
-    \textbf{Explicación caso de prueba 3:} En este caso tanto el torrent 2 como el 3 son aceptados
+    \textbf{Explicación caso de ejemplo 3:} En este caso tanto el torrent 2 como el 3 son aceptados
     como correctos, ya que ambos tienen la mayor cantidad de seeds e igual cantidad de peers.
     \end{minipage}
 \end{center}
