Añadir otro caso de ejemplo a poleras

--- a/poleras/statement/statement.tex
+++ b/poleras/statement/statement.tex
@@ -91,6 +91,15 @@ En el caso contrario, debe imprimir \texttt{NO}.
     Por lo tanto, en este caso la respuesta es \texttt{SI}.
     \end{minipage}
 \end{center}
+
+\sampleIO{sample-3}
+\begin{center}
+    \begin{minipage}{0.94\textwidth}
+    \textbf{Explicación caso de ejemplo 3:} En este caso la respuesta es \texttt{NO} porque si Javier
+    achica algunas poleras para obtener las poleras de talla 1 que le faltan se quedará sin poleras
+    suficientes de talla 2 o 3.
+    \end{minipage}
+\end{center}
 \end{sampleDescription}
 
 \end{document}
