Add paragraph break period

--- a/papas/statement/statement.tex
+++ b/papas/statement/statement.tex
@@ -43,7 +43,7 @@
 	La primera línea de entrada contiene tres enteros $p$, $n$ y $k$
 	$(1 \leq k \leq p \leq n \leq 10^6$ y $2 \leq n)$, los cuales
 	indican respectivamente la cantidad de papas, la cantidad de personas en el grupo
-	y la posición de Julieta
+	y la posición de Julieta.
 
 	La segunda línea contiene $p$ enteros, donde el entero $i$-ésimo
 	corresponde al tamaño $t_i$ ($1 \leq t_i \leq 10^3$) de la papa número $i$.
